# open-codeai

./: .env.example  .gitignore  =0.2.7  Dockerfile  LICENSE  README.md  README_en.md  docker-compose.minimal.yml  docker-compose.yml  pyproject.toml  quick_start.py  requirements-dev.txt  requirements.txt  test_api.py
configs/: config.yaml  database.yaml  models.yaml  performance.yaml
data/index_-1652219603957515681/: metadata.db
data/redis/: dump.rdb
examples/: continue.yaml  continue_config.json
offline_packages/: EditorConfig-0.17.0-py3-none-any.whl  accelerate-1.7.0-py3-none-any.whl  aiohttp-3.12.4-cp311-cp311-macosx_11_0_arm64.whl  backrefs-5.8-py311-none-any.whl  banks-2.1.2-py3-none-any.whl  coverage-7.8.2-cp311-cp311-macosx_11_0_arm64.whl  greenlet-3.2.2-cp311-cp311-macosx_11_0_universal2.whl  llama_cloud-0.1.23-py3-none-any.whl  llama_cloud_services-0.6.24-py3-none-any.whl  llama_index-0.12.38-py3-none-any.whl  llama_index_agent_openai-0.4.8-py3-none-any.whl  llama_index_cli-0.4.1-py3-none-any.whl  llama_index_embeddings_huggingface-0.5.4-py3-none-any.whl  llama_index_embeddings_openai-0.3.1-py3-none-any.whl  llama_index_graph_stores_neo4j-0.4.6-py3-none-any.whl  llama_index_indices_managed_llama_cloud-0.7.1-py3-none-any.whl  llama_index_llms_openai-0.3.44-py3-none-any.whl  llama_index_multi_modal_llms_openai-0.4.3-py3-none-any.whl  llama_index_program_openai-0.3.1-py3-none-any.whl  llama_index_question_gen_openai-0.3.0-py3-none-any.whl  llama_index_readers_file-0.4.8-py3-none-any.whl  llama_index_vector_stores_faiss-0.4.0-py3-none-any.whl  llama_parse-0.6.24-py3-none-any.whl  py_spy-0.4.0-py2.py3-none-macosx_11_0_arm64.whl  pyzmq-26.4.0-cp311-cp311-macosx_10_15_universal2.whl  scalene-1.5.51-cp311-cp311-macosx_14_0_universal2.whl  sentence_transformers-4.1.0-py3-none-any.whl  tree_sitter-0.24.0-cp311-cp311-macosx_11_0_arm64.whl  tree_sitter_go-0.23.4-cp39-abi3-macosx_11_0_arm64.whl  tree_sitter_javascript-0.23.1-cp39-abi3-macosx_11_0_arm64.whl  tree_sitter_python-0.23.6-cp39-abi3-macosx_11_0_arm64.whl  tree_sitter_rust-0.24.0-cp39-abi3-macosx_11_0_arm64.whl
scripts/: build_tree_sitter.py  download_model.py  download_models.py  download_offline_packages.sh  generate_env.py  install.sh  setup_vector_store.py  start.sh  verify_installation.py
src/: __main__.py  agent_tools.py  ai_agent.py  code_parser.py  config.py  embedder.py  enhanced_api_server.py  enhanced_rag_system.py  file_watcher.py  indexer.py  llm_server.py  main.py  rag_system.py
src/api/: agent.py  openai_compatible.py  project.py  routes.py
src/core/: agent.py  code_analyzer.py  code_parser.py  file_watcher.py  function_calling.py  llm_manager.py  llm_server.py  rag_system.py  tree_sitter_analyzer.py
src/utils/: __init__.py  embedding_server.py  hardware.py  (+4 more)
tests/: test_core_features.py
(+1 files in other folders)
